@@ -1,3 +1,12 @@
+2006-12-04  Matthew Barnes  <mbarnes@redhat.com>
+
+	Fixes bug #357970
+
+	* gui/contact-editor/e-contact-editor.c:
+	* gui/widgets/e-minicard.c:
+	* gui/widgets/eab-contact-display.c:
+	Don't call deprecated GLib / GDK functions.
+
 2006-11-11  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* gui/widgets/eab-contact-display.c: Fixed #358249
